<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zvonilka</string>
    <string name="login_text">Log in</string>
    <string name="logout_text">Log out</string>

    <string name="register_text">Register</string>
    <string name="restore_link">restore</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="restore_password_page_name">Password Restoration</string>
    <string name="registration_page_name">Registration</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="password_recovery_page_name">Password Recovery</string>
    <string name="warning_icon_description">Warning icon</string>
    <string name="remember_login_text">Remember me</string>

    <string name="email_field_prompt">Email:</string>

    <string name="name_field_prompt">Name:</string>

    <string name="password_field_prompt">Password:</string>

    <string name="default_registered_text">Registered successfully!</string>

    <string name="registration_success_message">Thank you for registering with the %1$s. Click the button below to proceed to the login.</string>
    <string name="title_activity_select">Zvonilka</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_select_events">Events</string>
    <string name="fragment_select_users">Users</string>
    <string name="fragment_select_search">Search</string>
    <string name="city">City: </string>
    <string name="date">Date: </string>
    <string name="company">Company: </string>
    <string name="eventDescription">Description: </string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="email">Email: </string>
    <string name="phone">Phone: </string>
    <string name="address">Address: </string>
    <string name="interests">Interests: </string>
    <string name="bithdaydate">Birthday date: </string>
    <string name="family">Family: </string>
    <string name="image_button_description">Call to current contact</string>
    <string name="markasdone">Mark as Done</string>
    <string name="event">Event</string>
    <string name="notes">Notes:</string>
    <string name="fragment_select_to_do">ToDo</string>
    <string name="save_changes">Save Changes</string>
    <string name="action_save_changes">Save</string>
    <string name="action_save_edit">Edit</string>
    <string name="status">Status:</string>
    <string name="add_event">Add Event</string>
    <string name="add_user_data">Add User Data</string>
    <string name="menu_select_message">Select Action</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="position">Position:</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="set_birthday_here">Set Birthday here!</string>
    <string name="error_didnt_write_field">Write field First name, Second name and phone number!</string>
    <string name="set_date_here">Set Date Here!</string>
    <string name="write_name_city">Write Event\'s name and city!</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved!</string>
    <string name="loading">Loading…</string>
    <string name="add_company">Company</string>
    <string name="add_todo">Add ToDo</string>
    <string name="title_activity_user_data_activity_demo">Client Profile</string>
    <string name="user_data">UserData</string>
    <string name="history">History</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="update_client_profile">Update Client Profile</string>
    <string name="update">Update</string>
    <string name="title_activity_event_activity_demo">Event</string>
    <string name="users">Users</string>
</resources>