<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuSelectActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="50"
        android:title="@string/fragment_select_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_user_data"
        android:orderInCategory="40"
        android:title="@string/add_user_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_event"
        android:orderInCategory="30"
        android:title="@string/add_event"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_company"
        android:orderInCategory="60"
        android:title="@string/add_company"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="20"
        android:title="@string/update"
        app:showAsAction="always"

        />
</menu>
