<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddUserDataActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/activity_user_add_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/activity_user_add_first_name"
                android:text="@string/second_name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/first_name" />

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignTop="@+id/activity_user_add_first_name"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/activity_user_add_second_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/activity_user_add_first_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/activity_user_add_first_name"
                android:layout_below="@+id/textView3" />

            <EditText
                android:id="@+id/activity_user_add_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_toLeftOf="@+id/space"
                android:layout_toStartOf="@+id/space" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@+id/activity_user_add_second_name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/activity_user_add_phone_number"
                android:layout_below="@+id/textView4"
                android:layout_toRightOf="@+id/activity_user_add_email"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/textView5"
                android:layout_below="@+id/activity_user_add_second_name"
                android:layout_toRightOf="@+id/activity_user_add_email"
                android:layout_toEndOf="@+id/activity_user_add_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/textView6"
                android:layout_below="@+id/activity_user_add_email"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_alignEnd="@+id/activity_user_add_email"
                android:id="@+id/activity_user_add_city"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:text="@string/address"
                android:layout_below="@+id/activity_user_add_phone_number"
                android:layout_alignStart="@+id/activity_user_add_phone_number"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_alignParentRight="true"
                android:id="@+id/activity_user_add_address"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:text="@string/interests"
                android:layout_below="@+id/activity_user_add_city"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_user_add_interests"
                android:layout_below="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:layout_alignParentRight="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:text="@string/bithdaydate"
                android:layout_below="@+id/activity_user_add_interests"
                />
            <Space
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:id="@+id/space2"
                android:layout_below="@+id/textView9"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:layout_below="@+id/space2"
                android:id="@+id/textView10"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView10"
                android:id="@+id/activity_user_add_family"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:id="@+id/textView11"
                android:layout_below="@+id/activity_user_add_family"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_user_add_company"
                android:layout_below="@+id/textView11"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/space"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:text="@string/position"
                android:layout_above="@+id/activity_user_add_company"
                android:layout_toEndOf="@+id/activity_user_add_company"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_user_add_position"
                android:layout_below="@+id/textView12"
                android:layout_alignStart="@+id/textView12"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_birthday_here"
                android:id="@+id/activity_add_user_birthday_text"
                android:layout_below="@+id/textView9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
