<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kg.kloop.rinat.zvonilka.AddEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/text1"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:id="@+id/activity_add_event_name"
                android:inputType="text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/text2"
                android:layout_below="@+id/activity_add_event_name"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:id="@+id/activity_add_event_city"
                android:inputType="text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/date"
                android:layout_below="@+id/activity_add_event_city"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date_here"
                android:layout_below="@+id/date"
                android:id="@+id/activity_add_event_date"
                android:paddingBottom="@dimen/dp16"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:text="@string/notes"
                android:layout_below="@+id/activity_add_event_date"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_add_event_note"
                android:layout_below="@+id/city"
                android:inputType="text"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_client"
                android:id="@+id/add_clients"
                android:layout_below="@+id/activity_add_event_note"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/add_clients"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
